--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>My Dream Fashion</h1>
 <p>My Fashion.</p>
 img src="pic_trulli.jpg" alt="Italian Trulli"
-<img src="img_chania.jpg" alt="Flowers in Chania">
+<img src="chania.jpg" alt="Flowers in Chania">
 <h1 style="background-color:DodgerBlue;">My Dream Fashion</h1>
 </body>
 </html>
