--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <center>
 <h1>My Dream Fashion</h1>
 <p>My Fashion.</p>
-img src="pic_trulli.jpg" alt="Italian Trulli"
-<img src="chania.jpg" alt="Flowers in Chania">
+<img src="pic_trulli.jpg" alt="Flowers in Chania">
 <h1 style="background-color:DodgerBlue;">My Dream Fashion</h1>
 </body>
 </html>
