--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <p>My Fashion.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <h1 style="background-color:DodgerBlue;">My Dream Fashion</h1>
+<img src="img_girl.jpg" alt="Girl in a jacket">  
 </body>
 </html>
