--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<body style="background-color :red;">  
+<title>My Dream Place</title>
 </head>
 <body>
 <center>
 <h1>My Dream Fashion</h1>
 <p>My Fashion.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
-<h1 style="background-color:DodgerBlue;">My Dream Fashion</h1>
-<img src="img_girl.jpg" alt="Girl in a jacket">  
+<h1 style="background-color:DodgerBlue;">My Dream Fashion</h1> 
 </body>
 </html>
+
+
+
