--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <h1>My Dream Fashion</h1>
 <p>My Fashion.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
+<p>Owner: Jether Bagor</p>
 <h1 style="background-color:DodgerBlue;">My Dream Fashion</h1> 
 </body>
 </html>
 
-CREATED BY: MARK MANGAYAO
+
 
