--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>My Dream Fashion</h1>
 <p>My Fashion.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
-<p>Owner: Mark T. Mangayao</p>
+<p>Owner: Mark Mangayao</p>
 <h1 style="background-color:DodgerBlue;">My Dream Fashion</h1> 
 </body>
 </html>
