--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <p>My Fashion.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <p>Owner: Mark Mangayao</p>
-<h1 style="background-color:DodgerBlue;">My Dream Fashion</h1> 
+<h1 style="background-color:DodgerBlue;">My Dream Fashion</h1>
+<img src="paris.jpg" alt="Paris">
 </body>
 </html>
 
