--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <body style="background-color :red;">  
-<title>My Dream Place</title>
+<title>HI IM A PLACE TOURIST GUIDE</title>
 </head>
 <body>
 <center>
-<h1>My Dream Fashion</h1>
+<h1>i Am Mark Mangayao</h1>
 <p>My Fashion.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <p>Owner: Mark Mangayao</p>
