--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>My Fashion.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <p>Owner: Mark Mangayao</p>
-<h1 style="background-color:DodgerBlue;">My Dream Fashion</h1>
+<h1 style="background-color:DodgerBlue;">My tourist guide</h1>
 
 </body>
 </html>
@@ -63,7 +63,7 @@ button:hover, a:hover {
 
 <div class="card">
   <img src="https://source.unsplash.com/1600x900/?man,boy" alt="John" style="width:100%">
-  <h1>John Doe</h1>
+  <h1>Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
   <p>Harvard University</p>
   <div style="margin: 24px 0;">
