--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 }
 
 .title {
-  color: grey;
+  color: GREEN;
   font-size: 18px;
 }
 
@@ -63,9 +63,9 @@ button:hover, a:hover {
 
 <div class="card">
   <img src="https://source.unsplash.com/1600x900/?man,boy" alt="John" style="width:100%">
-  <h1>Mark Mangayao</h1>
+  <h1>Hi Im Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
-  <p>Harvard University</p>
+  <p>JRMSU TAMPILISAN</p>
   <div style="margin: 24px 0;">
     <a href="#"><i class="fa fa-dribbble"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
