--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <center>
 <h1>i Am Mark Mangayao</h1>
-<p>My Fashion.</p>
+<p>My Favorite spot.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <p>Owner: Mark Mangayao</p>
 <h1 style="background-color:DodgerBlue;">My tourist guide</h1>
