--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 }
 
 button {
-  border: none;
+  border: RED;
   outline: 0;
   display: inline-block;
   padding: 8px;
@@ -62,7 +62,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  <img src="https://source.unsplash.com/1600x900/?man,boy" alt="John" style="width:100%">
+  <img src="https://source.unsplash.com/1600x900/?man,boy" alt="Mark" style="width:100%">
   <h1>Hi Im Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
   <p>UNIVERSITY TAMPILISAN</p>
@@ -74,7 +74,7 @@ button:hover, a:hover {
   </div>
   <p><button>Contact</button></p>
 </div>
-
+  display: block;
 </body>
 </html>
 
