--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="background-color :red;">  
+<body style="background-color :BLUE;">  
 <title>HI IM A PLACE TOURIST GUIDE</title>
 </head>
 <body>
@@ -14,6 +14,11 @@
 
 </body>
 </html>
+
+div {
+  display: block;
+}
+
 
 <!DOCTYPE html>
 <html>
