--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 <body style="background-color :BLUE;">  
+ body {background-color: coral;} 
 <title>HI IM A PLACE TOURIST GUIDE</title>
 </head>
 <body>
 <center>
 <h1>i Am Mark Mangayao</h1>
-<p>My Favorite spot.</p>
+<p>My WEBSITE I CREATE PLACE.</p>
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <p>Owner: Mark Mangayao</p>
-<h1 style="background-color:DodgerBlue;">My tourist guide</h1>
+<h1 style="background-color:DodgerBlue;">My Website</h1>
 
 </body>
 </html>
