--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="background-color :BLUE;">  
- body {background-color: coral;} 
+<body style="background-color :blue;">  
+< body {background-color: blue;">
 <title>HI IM A PLACE TOURIST GUIDE</title>
 </head>
 <body>
