--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="background-color :blue;">  
-< body {background-color: blue;">
+<body style="background-color :white;">  
+< body {background-color: white;">
 <title>HI IM A PLACE TOURIST GUIDE</title>
 </head>
 <body>
