--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  <img src="https://mark mangayao.jpg" alt="Mark" style="width:100%">
+  <img src="mark_ mangayao.jpg" alt="mark mangayao">
   <h1>Hi Im Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
   <p>UNIVERSITY TAMPILISAN</p>
