--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  https://source.unsplash.com/1600x900/?man,boy"
+   <img src="https://source.unsplash.com/1600x900/?man,boy" alt="John" style="width:100%">
   <h1>Hi Im Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
   <p>UNIVERSITY TAMPILISAN</p>
@@ -83,6 +83,43 @@ button:hover, a:hover {
   display: block;
 </body>
 </html>
+
+  <div class="card">
+  <img src="jeans3.jpg" alt="Denim Jeans" style="width:100%">
+  <h1>Tailored Jeans</h1>
+  <p class="price">$19.99</p>
+  <p>Some text about the jeans..</p>
+  <p><button>Add to Cart</button></p>
+</div>
+
+  .card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
+}
 
 
 
