--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <p>Owner: Mark Mangayao</p>
 <h1 style="background-color:DodgerBlue;">My Website</h1>
+<background-size: 300px 100px;</P>
 
 </body>
 </html>
@@ -138,7 +139,6 @@ button:hover, a:hover {
   <a href="#band" class="w3-button w3-bar-item">Band</a>
   <a href="#tour" class="w3-button w3-bar-item">Tour</a>
   <a href="#contact" class="w3-button w3-bar-item">Contact</a>
-</nav>!-- Content will go here -->
 
 </body>
 </html>
