--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <img src="pic_trulli.jpg" alt="Italian Trulli">
 <p>Owner: Mark Mangayao</p>
 <h1 style="background-color:DodgerBlue;">My Website</h1>
-<background-size: 300px 100px;</P>
+
 
 </body>
 </html>
 
-div {
-  display: block;
+ background: url(pic_trulli.jpg);
+  background-repeat: no-repeat;
+  background-size: 300px 100px;
 }
+
 
 
 <!DOCTYPE html>
