--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
 </body>
 </html>
 
- background: url(pic_trulli.jpg);
-  background-repeat: no-repeat;
-  background-size: 300px 100px;
-}
-
-
 
 <!DOCTYPE html>
 <html>
@@ -82,6 +76,7 @@ button:hover, a:hover {
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div>
   <p><button>Contact</button></p>
+  <p><button>name</button></p>p>
 </div>
 
 </body>
