--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 }
 
 .title {
-  color: GREEN;
+  color: grey;
   font-size: 18px;
 }
 
 button {
-  border: RED;
+  border: none;
   outline: 0;
   display: inline-block;
   padding: 8px;
@@ -65,10 +65,10 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-   <img src="mark_mangayao.jpg" alt="Mark" style="width:100%">
-  <h1>Hi Im Mark Mangayao</h1>
+  <img src="mark_mangayao.jpg alt="mark" style="width:100%">
+  <h1>I am Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
-  <p>UNIVERSITY TAMPILISAN</p>
+  <p>Harvard University</p>
   <div style="margin: 24px 0;">
     <a href="#"><i class="fa fa-dribbble"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
@@ -77,9 +77,10 @@ button:hover, a:hover {
   </div>
   <p><button>Contact</button></p>
 </div>
-  
+
 </body>
 </html>
+
 
  
 
