--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  <img src="mark_mangayao.jpg alt="mark" style="width:100%">
+<img src="mark_mangayao.jpg" alt="Mark">
   <h1>I am Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
   <p>Harvard University</p>
