--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ button:hover, a:hover {
 <img src="mark_mangayao.jpg" alt="Mark">
   <h1>I am Mark Mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
-  <p>Harvard University</p>
+  <p>University OF tampilisan</p>
   <div style="margin: 24px 0;">
     <a href="#"><i class="fa fa-dribbble"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
