--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </html>
 
 
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -65,10 +65,10 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-<img src="mark_mangayao.jpg" alt="Mark">
-  <h1>I am Mark Mangayao</h1>
+  <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+  <h1>MARK mangayao</h1>
   <p class="title">CEO & Founder, Example</p>
-  <p>University OF tampilisan</p>
+  <p>Harvard University</p>
   <div style="margin: 24px 0;">
     <a href="#"><i class="fa fa-dribbble"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
@@ -80,7 +80,6 @@ button:hover, a:hover {
 
 </body>
 </html>
-
 
  
 
