--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
 <p>Owner: Mark Mangayao</p>
 <h1 style="background-color:DodgerBlue;">My Website</h1>
 
+<h2>Form on Itallian Trulli</h2>
+<div class="bg-img">
+  <form action="/action_page.php" class="container">
+    <h1>Login</h1>
 
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
+    <button type="submit" class="btn">Login</button>
+  </form>
+</div>
+
+<p>This example creates a form on a responsive image. Try to resize the browser window to see how it always will cover the whole width of the screen, and that it scales nicely on all screen sizes.</p>
+
+</body>
+</html>
+
+  
 </body>
 </html>
 
