--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <center>
 <h1>i Am Mark Mangayao</h1>
 <p>My WEBSITE I CREATE PLACE.</p>
-<img src="pic_trulli.jpg" alt="Italian Trulli" style="width:150%">  
+<img src="pic_trulli.jpg" alt="Italian Trulli" style="width:120%">  
 <p>Owner: Mark Mangayao</p>
 <h1 style="background-color:DodgerBlue;">My Website</h1>
 
 <h2>Form on Itallian Trulli</h2>
-<div class="bg-img">
+<div class="Itallian Trulli">
   <form action="/action_page.php" class="container">
     <h1>Login</h1>
 
