--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="background-color :black;">  
+<body style="background-color :White;">  
 < body {background-color: white;">
 <title>HI IM A PLACE TOURIST GUIDE</title>
 </head>
