--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center>
 <h1>i Am Mark Mangayao</h1>
 <p>My WEBSITE I CREATE PLACE.</p>
-<img src="MANGAYAO_MARK.jpg" alt="MANGAYAO_MARK" style="width:200%">  
+<img src="Itallian Trulli.jpg" alt="Itallian Trulli" style="width:200%">  
 <p>Owner: Mark Mangayao</p>
 <h1 style="background-color:DodgerBlue;">My Website</h1>
 
